fixed overlapping side menu and active shower

--- a/src/components/ActiveShower/styles.css
+++ b/src/components/ActiveShower/styles.css
@@ -1,3 +1,3 @@
 .showerContainer {
-    float: right;
+    
 }
