--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-body {
+html, body {
   margin: 0;
   padding: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #E6E6E6;
+  height: 100%;
 }
